# ImageProcessing-Liam

./: .gitignore  README.md  pyproject.toml
dev/examples/: pyociodisplay.py
src/OCIOexperiments/: pyproject.toml
src/OCIOexperiments/OCIOexperiments/: __init__.py  basic.py  c.py  io.py  transforms.py  utils.py  wrappers.py
src/OCIOexperiments/OCIOexperiments/agxc/: c.py  transforms.py
src/OCIOexperiments/OCIOexperiments/agxc/tests/: tests_transforms.py
src/OCIOexperiments/OCIOexperiments/gpu/: PySignal.py  README.md  __init__.py  c.py  gl.py  glUtils.py  main.py  ocioUtils.py  utils.py  windowCreate.py  windows.py
src/OCIOexperiments/OCIOexperiments/gpu/tests/: tests_ocioUtils.py  tests_ocioutils.py
src/OCIOexperiments/OCIOexperiments/grading/: __init__.py  c.py  interactive.py  processes.py
src/OCIOexperiments/OCIOexperiments/grading/tests/: tests_interactive.py  tests_ocioUtils.py  tests_processes.py
src/OCIOexperiments/OCIOexperiments/grading/tests/data/: test.oog_agx.test_1.ref.tif
src/OCIOexperiments/OCIOexperiments/gui/: basicViewer.py  c.py  windows.py
src/OCIOexperiments/OCIOexperiments/testing/: README.md  __init__.py  core.py
src/OCIOexperiments/OCIOexperiments/tests/: tests_transforms.py
src/OCIOexperiments/dev/data/configs/AgXc-v0.1.4/: config.ocio
src/OCIOexperiments/dev/data/scenes/: AgX_look_test.v0001.nknc  AgX_test.blend
src/OCIOexperiments/dev/data/webcam/: webcam-c922-A.0001.tif
src/OCIOexperiments/dev/launchers/: Blender.3.1.ocio.agxc.sh  Nuke13.1v3.NC_ocio.agxc_shelf0001.sh
src/OCIOexperiments/tests/: test_gpuProcess.py  tests_basic.py
src/WebcamLiveProcessing/: README.md  pyproject.toml
src/WebcamLiveProcessing/WebcamLiveProcessing/: __init__.py  c.py  main.py  sources.py
src/WebcamLiveProcessing/tests/: tests_agxc.py  tests_main.py  tests_misc.py
src/imageGridCombine/: README.md  __init__.py  core.py  demo.py  imageGridCombine.py  utilities.py
src/imageGridCombine/imageGridCombine/: __init__.py  core.py  utilities.py
src/imageGridCombine/imageGridCombine/tests/: tests_core.py
src/imageGridCombine/tests/: tests_core.py  tests_imageGridCombine.py
src/lxMath/: README.md  pyproject.toml
src/lxMath/lxMath/: __init__.py  c.py  matrix.py  vector.py
src/lxMath/lxMath/tests/: test_matrix.py  test_vector.py
src/lxmImageIO/: pyproject.toml
src/lxmImageIO/lxmImageIO/: __init__.py  c.py  containers.py  io.py  testing.py  utils.py
src/lxmImageIO/lxmImageIO/io/: __init__.py  c.py  create.py  read.py  write.py
src/lxmImageIO/lxmImageIO/io/tests/: tests_read.py
src/pixelDataTesting/: README.md
src/pixelDataTesting/pixelDataTesting/: __init__.py  autoGenerate.py  c.py  config.py  containers.py  content.py
src/pixelDataTesting/pixelDataTesting/data/: README.md
src/pixelDataTesting/pixelDataTesting/data/dragonScene/: dragonScene.0001.base.aces.half.1001.exr
src/pixelDataTesting/pixelDataTesting/tests/: tests_containers.py
src/video2gif/: README.md  video_to_gif.bat  video_to_gif.py
