[tool.poetry]
name = "liamimageprocessing"
version = "0.1.0"
description = ""
authors = ["Liam Collod <lcollod@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
Pillow = "9.1.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "*"
grip = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
