[tool.poetry]
name = "webcamColorProcessing"
version = "0.1.0"
description = ""
authors = ["Liam Collod <lcollod@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
pyvirtualcam = "0.9.1"
opencv-python = "4.5.5"
opencolorio = "2.1.1"
numpy = "*"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
